# Dise-o-ASIC-FPGA-FPU

./: .gitignore  .gitignore~  ASICFLOW.sublime-project  ASICFLOW.sublime-workspace  CORDIC_ROTATION.ods  DVE_Intro  README.md  case_LUT.perl  keep_script  lut_CASE.pl  lut_CASE_64.v
ASIC_FLOW/: sources  (+19 more)
Literature FPUs/flopoco-2.3.2/: CMakeCache.txt  CMakeLists.txt  CPackConfig.cmake  CPackSourceConfig.cmake  Doxyfile  Makefile  Makefile.autotools  README  TODO  bin2fp  cmake_install.cmake  fp2bin  fpadder_example  gmon.out  longacc2fp
Literature FPUs/flopoco-2.3.2/autotools/: Makefile.am  configure.ac
Literature FPUs/flopoco-2.3.2/autotools/src/: Makefile.am
Literature FPUs/flopoco-2.3.2/doc/: ReleaseNotes  coding_conventions.html
Literature FPUs/flopoco-2.3.2/doc/Figures/: FPConstMult.fig  FloPoCoClasses.dia  Log.tex  LogArch.fig  LogRangeRed.fig  flopocoLogo.fig  flopocoLogo.pdf_t
Literature FPUs/flopoco-2.3.2/doc/flopoco_developer_manual/: flopoco_developer_manual.tex
Literature FPUs/flopoco-2.3.2/doc/web/: flopoco_user_manual.html  index.html  ttr.html
Literature FPUs/flopoco-2.3.2/src/: DotProduct.cpp  DualTable.cpp  DualTable.hpp  FP2Fix.cpp  FP2Fix.hpp  FPAdder3Input.cpp  FPAdderDualPath.cpp  FPAdderSinglePath.cpp  FPConstDiv.cpp  FPDiv.cpp  FPExp.cpp  FPExp.hpp  FPLog.cpp  FPLog.hpp  FPMultiplier.cpp  FPMultiplier.hpp  FPMultiplierKaratsuba.cpp  FPNumber.cpp  FPNumber.hpp  FPPipeline.cpp  FPPipeline.hpp  FPPow.cpp  FPSqrt.cpp  FPSqrt.hpp  FPSqrtPoly.cpp  FPSqrtPoly.hpp  FPSquarer.cpp  FPSumOfSquares.cpp  FPSumOfSquares.hpp  FXP_Shift.cpp  FXP_Shift.hpp  Fix2FP.cpp  FloPoCo.hpp  InputIEEE.cpp  IntAdder.cpp  IntAdder.hpp  IntConstDiv.cpp  IntConstDiv.hpp  IntMultiAdder.cpp  IntMultiplier.cpp  (+25 more)
Literature FPUs/flopoco-2.3.2/src/ConstMult/: CRFPConstMult.cpp  FPConstMult.cpp  FPRealKCM.cpp  FixRealKCM.cpp  FixRealKCM.hpp  IntConstMult.cpp  IntIntKCM.cpp  IntIntKCM.hpp
Literature FPUs/flopoco-2.3.2/src/FPExpAttic/: README  explore.cpp  explore.h  fp_exp.template  fp_exp_template.cpp  fragment.cpp  fragment.h  gen_table.cpp  gen_table.h  logfragment.cpp  logfragment.h  main.cpp  math_lib.cpp  math_lib.h  signal.cpp  signal.h  stdfragment.cpp  stdfragment.h
Literature FPUs/flopoco-2.3.2/src/FPExpressions/: ExpressionParser.cpp  ExpressionParser.h  ExpressionParserData.cpp  ExpressionScanner.cpp  ExpressionScanner.l  FlopocoScanner.h
Literature FPUs/flopoco-2.3.2/src/FixedPointFunctions/: Function.cpp  Function.hpp  FunctionEvaluator.cpp  FunctionTable.cpp  FunctionTable.hpp  HOTBM.cpp  HOTBM.hpp  PiecewiseFunction.hpp  PolyCoeffTable.cpp  PolyCoeffTable.hpp  PolynomialEvaluator.cpp  PolynomialEvaluator.hpp
Literature FPUs/flopoco-2.3.2/src/IntAddition/: CarryGenerationCircuit.cpp  IntAdderAlternative.cpp  IntAdderClassical.cpp  IntAdderShortLatency.cpp  IntAdderSpecific.cpp  IntCompressorTree.cpp  LongIntAdderAddAddMuxGen1.cpp  LongIntAdderAddAddMuxGen2.cpp  LongIntAdderCmpAddIncGen1.cpp  LongIntAdderCmpAddIncGen2.cpp  (+3 more)
Literature FPUs/flopoco-2.3.2/tools/: flopoco_test.cmd  qrunsyn  release_test.py  runsyn
Literature FPUs/sollya-4.1/: AUTHORS  ChangeLog  Makefile  Makefile.am  Makefile.in  NEWS  README  assignment.c  assignment.h  assignment.lo  autodiff.c  autodiff.h  autodiff.lo  bitfields.c  bitfields.h  bitfields.lo  chain.c  chain.h  chain.lo  chebyshevform.c  chebyshevform.h  chebyshevform.lo  chebyshevformaux.c  chebyshevformaux.h  chebyshevformaux.lo  compile.sh  config.h  config.h.in  config.status  configure  configure.ac  double.c  double.h  double.lo  execute.c  execute.h  expansion.c  expansion.h  expression.c  expression.h  (+99 more)
Literature FPUs/sollya-4.1/.deps/: assignment.Plo  autodiff.Plo  bitfields.Plo  chain.Plo  chebyshevform.Plo  chebyshevformaux.Plo  double.Plo  execute.Plo  expression.Plo  external.Plo  fpminimax.Plo  general.Plo  implement.Plo  implementconst.Plo  infnorm.Plo  integral.Plo  internlexer.Plo  internparser.Plo  lexer.Plo  library.Plo  match.Plo  minilexer.Plo  miniparser.Plo  mpfi-compat.Plo  parser.Plo  plot.Plo  printf.Plo  proof.Plo  remez.Plo  signalhandling.Plo  sollya-assignment.Po  sollya-autodiff.Po  sollya-bitfields.Po  sollya-chain.Po  sollya-chebyshevform.Po  sollya-chebyshevformaux.Po  sollya-double.Po  sollya-execute.Po  sollya-expression.Po  sollya-external.Po  (+37 more)
Literature FPUs/sollya-4.1/.libs/: libsollya.la  libsollya.lai
Literature FPUs/sollya-4.1/doc/: Makefile  Makefile.am  Makefile.in
Literature FPUs/sollya-4.1/tests-lib/: Makefile  Makefile.am  Makefile.in  check.proto  libraryexample.c  tabs.c  tabsolute.c  tacos.c  tacos.reference  tacosh.c  tadd.c  tadd.reference  tand.c  tand.reference  tappend.c  tappend.reference  tasciiplot.c  tasciiplot.reference  tasin.c  tasinh.c  tasinh.reference  tatan.c  tatan.reference  tatanh.c  tbashexecute.c  tbinary.c  tboolean_list_ops.c  tboolean_list_ops.reference  tbuild_end_elliptic_list.c  tbuild_end_elliptic_list.reference  tbuild_function_abs.c  tbuild_function_abs.reference  tbuild_function_acos.c  tbuild_function_acosh.c  tbuild_function_acosh.reference  tbuild_function_add.c  tbuild_function_asin.c  tbuild_function_asin.reference  tbuild_function_asinh.c  tbuild_function_atan.c  (+525 more)
Literature FPUs/sollya-4.1/tests-tool/: Makefile  Makefile.am  Makefile.in  check.proto  check001.sollya  check001.sollya.reference  check003.sollya.reference  check004.sollya.reference  check005.sollya  check005.sollya.reference  check008.sollya  check009.sollya  check009.sollya.reference  check010.sollya.reference  check011.sollya  check012.sollya  check012.sollya.reference  check013.sollya  check013.sollya.reference  check014.sollya.reference  check015.sollya  check015.sollya.reference  check017.sollya  check017.sollya.reference  check018.sollya  check018.sollya.reference  check019.sollya  check019.sollya.reference  check020.sollya  check020.sollya.reference  check021.sollya  check021.sollya.reference  check022.sollya  check022.sollya.reference  check023.sollya  check023.sollya.reference  check024.sollya  check024.sollya.reference  check025.sollya  check025.sollya.reference  (+10 more)
(+10466 files in other folders)
